--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,9 @@ body{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, auto);
-    gap: 1.5rem;
+    gap: 3rem;
     margin-top: 3rem;
 }
-
 .main-title{
     font-size: 2.25rem;
     font-weight: bold;
@@ -52,7 +51,7 @@ body{
     margin-bottom: 2rem;
 }
 .get-started-btn{
-    background-color: #6366F1;
+    background-color: #6B7280;
     color: white;
     padding: 0.5rem 1rem;
     border-radius: 0.375rem;
@@ -60,7 +59,7 @@ body{
     cursor: pointer;
 }
 .get-started-btn:hover{
-    color: #4F46E5;
+    color: #6B7280;
 }
 .featured-pets-container{
     display: grid;
